--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@styled-icons/bootstrap": "10.47.0",
     "@styled-icons/entypo": "10.46.0",
     "dayjs": "1.11.11",
-    "hermes-io": "2.6.51",
+    "hermes-io": "2.7.51",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,25 +25,25 @@
     "styled-components": "6.1.11"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.4",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-onboarding": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/react-vite": "^8.0.10",
-    "@storybook/test": "^8.0.10",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-plugin-storybook": "^0.8.0",
-    "prop-types": "^15.8.1",
-    "storybook": "^8.0.10",
-    "vite": "^5.2.0"
+    "@chromatic-com/storybook": "1.3.4",
+    "@storybook/addon-essentials": "8.0.10",
+    "@storybook/addon-interactions": "8.0.10",
+    "@storybook/addon-links": "8.0.10",
+    "@storybook/addon-onboarding": "8.0.10",
+    "@storybook/blocks": "8.0.10",
+    "@storybook/react": "8.0.10",
+    "@storybook/react-vite": "8.0.10",
+    "@storybook/test": "8.0.10",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.6",
+    "eslint-plugin-storybook": "0.8.0",
+    "prop-types": "15.8.1",
+    "storybook": "8.0.10",
+    "vite": "5.2.0"
   }
 }
