--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@styled-icons/bootstrap": "10.47.0",
+    "@styled-icons/bootstrap": "^10.47.0",
+    "@styled-icons/boxicons-regular": "^10.47.0",
     "@styled-icons/entypo": "10.46.0",
+    "@styled-icons/evaicons-solid": "^10.46.0",
+    "@styled-icons/material": "^10.47.0",
+    "@styled-icons/material-outlined": "^10.47.0",
     "dayjs": "1.11.11",
-    "hermes-io": "2.8.52",
+    "hermes-io": "2.8.70",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
