Adding direction to notification

--- a/package.json
+++ b/package.json
@@ -4,31 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "APP_ENV='DEV' vite",
-    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-diSHARPives --max-warnings 0",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
+    "start": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@styled-icons/bootstrap": "^10.47.0",
-    "@styled-icons/boxicons-logos": "^10.47.0",
-    "@styled-icons/boxicons-regular": "^10.47.0",
+    "@styled-icons/bootstrap": "10.47.0",
+    "@styled-icons/boxicons-logos": "10.47.0",
+    "@styled-icons/boxicons-regular": "10.47.0",
     "@styled-icons/entypo": "10.46.0",
-    "@styled-icons/evaicons-solid": "^10.46.0",
-    "@styled-icons/fa-solid": "^10.47.0",
-    "@styled-icons/ionicons-solid": "^10.46.0",
+    "@styled-icons/evaicons-solid": "10.46.0",
+    "@styled-icons/fa-solid": "10.47.0",
+    "@styled-icons/ionicons-solid": "10.46.0",
     "@styled-icons/material": "^10.47.0",
-    "@styled-icons/material-outlined": "^10.47.0",
-    "dayjs": "1.11.11",
+    "@styled-icons/material-outlined": "10.47.0",
     "hermes-io": "2.8.74",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "spdx-correct": "3.2.0",
     "styled-components": "6.1.11"
   },
   "devDependencies": {
@@ -41,7 +36,7 @@
     "@storybook/react": "8.0.10",
     "@storybook/react-vite": "8.0.10",
     "@storybook/test": "8.0.10",
-    "@styled-icons/evaicons-outline": "^10.46.0",
+    "@styled-icons/evaicons-outline": "10.46.0",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react-swc": "3.5.0",
