--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@styled-icons/ionicons-solid": "10.46.0",
     "@styled-icons/material": "^10.47.0",
     "@styled-icons/material-outlined": "10.47.0",
-    "hermes-io": "2.8.74",
+    "hermes-io": "2.9.75",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,7 +36,7 @@
     "@storybook/react": "8.0.10",
     "@storybook/react-vite": "8.0.10",
     "@storybook/test": "8.0.10",
-    "@styled-icons/evaicons-outline": "10.46.0",
+    "@styled-icons/evaicons-outline": "^10.46.0",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react-swc": "3.5.0",
