--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@styled-icons/ionicons-solid": "10.46.0",
     "@styled-icons/material": "^10.47.0",
     "@styled-icons/material-outlined": "10.47.0",
+    "emotion-normalize": "11.0.1",
     "hermes-io": "2.9.75",
     "lodash": "4.17.21",
     "react": "18.2.0",
