--- a/package.json
+++ b/package.json
@@ -6,7 +6,110 @@
   "scripts": {
     "lint": "eslint . --ext js,jsx --report-unused-disable-diSHARPives --max-warnings 0",
     "start": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "storybook build",
+    "build-pack": "cd ./src && swc . -d ../lib"
+  },
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    },
+    "./components/ADDrawer": {
+      "import": "./lib/core/components/ADDrawer/index.js",
+      "require": "./lib/core/components/ADDrawer/index.js"
+    },
+    "./components/ADAccordion": {
+      "import": "./lib/core/components/ADAccordion/index.js",
+      "require": "./lib/core/components/ADAccordion/index.js"
+    },
+    "./components/ADBadge": {
+      "import": "./lib/core/components/ADBadge/index.js",
+      "require": "./lib/core/components/ADBadge/index.js"
+    },
+    "./components/ADBreadcrumbs": {
+      "import": "./lib/core/components/ADBreadcrumbs/index.js",
+      "require": "./lib/core/components/ADBreadcrumbs/index.js"
+    },
+    "./components/ADButton": {
+      "import": "./lib/core/components/ADButton/index.js",
+      "require": "./lib/core/components/ADButton/index.js"
+    },
+    "./components/ADCard": {
+      "import": "./lib/core/components/ADCard/index.js",
+      "require": "./lib/core/components/ADCard/index.js"
+    },
+    "./components/ADCheckbox": {
+      "import": "./lib/core/components/ADCheckbox/index.js",
+      "require": "./lib/core/components/ADCheckbox/index.js"
+    },
+    "./components/ADGrid": {
+      "import": "./lib/core/components/ADGrid/index.js",
+      "require": "./lib/core/components/ADGrid/index.js"
+    },
+    "./components/ADLoader": {
+      "import": "./lib/core/components/ADLoader/index.js",
+      "require": "./lib/core/components/ADLoader/index.js"
+    },
+    "./components/ADMedia": {
+      "import": "./lib/core/components/ADMedia/index.js",
+      "require": "./lib/core/components/ADMedia/index.js"
+    },
+    "ADMedia/*": {
+      "import": "./lib/core/components/ADMedia/*",
+      "require": "./lib/core/components/ADMedia/*"
+    },
+    "./components/ADNotification": {
+      "import": "./lib/core/components/ADNotification/index.js",
+      "require": "./lib/core/components/ADNotification/index.js"
+    },
+    "./components/ADOverlay": {
+      "import": "./lib/core/components/ADOverlay/index.js",
+      "require": "./lib/core/components/ADOverlay/index.js"
+    },
+    "./components/ADPanel": {
+      "import": "./lib/core/components/ADPanel/index.js",
+      "require": "./lib/core/components/ADPanel/index.js"
+    },
+    "./components/ADPopup": {
+      "import": "./lib/core/components/ADPopup/index.js",
+      "require": "./lib/core/components/ADPopup/index.js"
+    },
+    "./components/ADProvider": {
+      "import": "./lib/core/components/ADProvider/index.js",
+      "require": "./lib/core/components/ADProvider/index.js"
+    },
+    "./components/ADRadio": {
+      "import": "./lib/core/components/ADRadio/index.js",
+      "require": "./lib/core/components/ADRadio/index.js"
+    },
+    "./components/ADSelect": {
+      "import": "./lib/core/components/ADSelect/index.js",
+      "require": "./lib/core/components/ADSelect/index.js"
+    },
+    "./components/ADSteps": {
+      "import": "./lib/core/components/ADSteps/index.js",
+      "require": "./lib/core/components/ADSteps/index.js"
+    },
+    "./components/ADSwitch": {
+      "import": "./lib/core/components/ADSwitch/index.js",
+      "require": "./lib/core/components/ADSwitch/index.js"
+    },
+    "./components/ADTabs": {
+      "import": "./lib/core/components/ADTabs/index.js",
+      "require": "./lib/core/components/ADTabs/index.js"
+    },
+    "./components/ADText": {
+      "import": "./lib/core/components/ADText/index.js",
+      "require": "./lib/core/components/ADText/index.js"
+    },
+    "./components/ADTextField": {
+      "import": "./lib/core/components/ADTextField/index.js",
+      "require": "./lib/core/components/ADTextField/index.js"
+    },
+    "./components/ADTooltip": {
+      "import": "./lib/core/components/ADTooltip/index.js",
+      "require": "./lib/core/components/ADTooltip/index.js"
+    }
   },
   "dependencies": {
     "@emotion/react": "11.11.4",
@@ -18,10 +121,10 @@
     "@styled-icons/evaicons-solid": "10.46.0",
     "@styled-icons/fa-solid": "10.47.0",
     "@styled-icons/ionicons-solid": "10.46.0",
-    "@styled-icons/material": "^10.47.0",
+    "@styled-icons/material": "10.47.0",
     "@styled-icons/material-outlined": "10.47.0",
     "emotion-normalize": "11.0.1",
-    "hermes-io": "2.9.75",
+    "hermes-io": "^2.9.87",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,6 +141,8 @@
     "@storybook/react-vite": "8.0.10",
     "@storybook/test": "8.0.10",
     "@styled-icons/evaicons-outline": "^10.46.0",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.10",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react-swc": "3.5.0",
