--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "@styled-icons/boxicons-regular": "10.47.0",
   "@styled-icons/entypo": "10.46.0",
   "@styled-icons/evaicons-solid": "10.46.0",
+  "@styled-icons/evil": "^10.46.0",
   "@styled-icons/fa-solid": "^10.47.0",
   "@styled-icons/feather": "^10.47.0",
   "@styled-icons/heroicons-outline": "^10.47.0",
