--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "@styled-icons/feather": "^10.47.0",
   "@styled-icons/heroicons-outline": "^10.47.0",
   "@styled-icons/ionicons-solid": "10.46.0",
-  "@styled-icons/material": "10.47.0",
+  "@styled-icons/material": "^10.47.0",
   "@styled-icons/material-outlined": "^10.47.0",
   "@styled-icons/remix-fill": "^10.46.0",
   "emotion-normalize": "11.0.1",
