--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "@styled-icons/evil": "^10.46.0",
   "@styled-icons/fa-solid": "^10.47.0",
   "@styled-icons/feather": "^10.47.0",
+  "@styled-icons/fluentui-system-regular": "^10.47.0",
   "@styled-icons/heroicons-outline": "^10.47.0",
   "@styled-icons/ionicons-solid": "10.46.0",
   "@styled-icons/material": "^10.47.0",
