--- a/.swcrc
+++ b/.swcrc
@@ -23,6 +23,7 @@
       "ADButton/*": ["./src/core/components/ADButton/*"],
       "ADCard/*": ["./src/core/components/ADCard/*"],
       "ADPanel/*": ["./src/core/components/ADPanel/*"],
+      "ADSlides/*": ["./src/core/components/ADSlides/*"],
       "ADBadge/*": ["./src/core/components/ADBadge/*"],
       "ADDrawer/*": ["./src/core/components/ADDrawer/*"],
       "ADCheckbox/*": ["./src/core/components/ADCheckbox/*"],
