--- a/package.json
+++ b/package.json
@@ -133,6 +133,10 @@
    "import": "./lib/src/core/components/ADPopup/index.js",
    "require": "./lib/src/core/components/ADPopup/index.js"
   },
+  "./components/ADProductCard": {
+   "import": "./lib/src/core/components/ADProductCard/index.js",
+   "require": "./lib/src/core/components/ADProductCard/index.js"
+  },
   "./components/ADProductGrid": {
    "import": "./lib/src/core/components/ADProductGrid/index.js",
    "require": "./lib/src/core/components/ADProductGrid/index.js"
