--- a/.swcrc
+++ b/.swcrc
@@ -28,6 +28,8 @@
       "ADBadge/*": ["./src/core/components/ADBadge/*"],
       "ADDrawer/*": ["./src/core/components/ADDrawer/*"],
       "ADCheckbox/*": ["./src/core/components/ADCheckbox/*"],
+      "ADLoaderButton/*": ["./src/core/components/ADLoaderButton/*"],
+      "ADRangeSlider/*": ["./src/core/components/ADRangeSlider/*"],
       "ADTooltip/*": ["./src/core/components/ADTooltip/*"],
       "constants": ["./src/core/constants"],
       "theme": ["./src/core/theme/Light.js"]
