--- a/.swcrc
+++ b/.swcrc
@@ -24,6 +24,8 @@
       "ADCard/*": ["./src/core/components/ADCard/*"],
       "ADPanel/*": ["./src/core/components/ADPanel/*"],
       "ADSlides/*": ["./src/core/components/ADSlides/*"],
+      "ADShoppingCart/*": ["./src/core/components/ADShoppingCart/*"],
+      "ADProductStrips/*": ["./src/core/components/ADProductStrips/*"],
       "ADSlideIndicator/*": ["./src/core/components/ADSlides/components/ADSlideIndicator/*"],
       "ADBadge/*": ["./src/core/components/ADBadge/*"],
       "ADDrawer/*": ["./src/core/components/ADDrawer/*"],
